List of Changes
===============


2.2.0 beta 1 (2011-09-20)
-------------------------

* fixed silent data truncation bug on invalid values.
* added support for loading application configuration from a file;
  option `-C FILE`.
* refactored plugin architecture; added support for plugin parameters.
* added SQLAlchemy adapter.
* added support for statement-like functions; converted formatters
  to statements.
* added plugin `tweak.meta`: database metadata exposed as a database.
* added plugin `tweak.shell`: a simple web-based HTSQL editor.


2.1.1 final (2011-08-30)
------------------------

* General code cleanup and refactoring.
* Improved emitted SQL for projections and aggregates.
* Changed operator precedence to avoid parentheses around
  filtering and projection operators.
* Added a test data generator for HTSQL regression tests
  (thank to Yuri Yerokhin).
* Added support for hierarchical headers for `/:txt` and `/:html`
  formatters.
* Updated documentation.


2.1.0 rc 1 (2011-06-21)
-----------------------

* Added `/:tsv` formatter that generates output in tab-separated format
  (thank to Andrey Popp).
* A lot of updates to the tutorial, the reference and other
  documentation.
* Minor code updates and bug fixes.


2.1.0 beta 3 (2011-05-13)
-------------------------

* Added a fiber linking operator: `{x,y} -> T{x,y}`.
* Provide named attributes for kernel expressions and the complement
  link in a quotient scope: `(program^degree)` generates attribute
  `degree` as an alias for `*1` and `program` as an alias for `^`.
* Added in-selector definitions: `{attr := expr}` is de-sugared to
  `define(attr := expr){attr}`.
* Added `$reference` syntax for inter-scope references.
* Added flow method `fork()`: clone the last node in the flow, e.g.
  `/course?credits=max(fork().credits)`.
* Added flow methods `.filter()` and `.select()` as aliases to `?`
  and `{}` operators.
* Added method `distinct()`: `distinct(table{kernel})` produces