@@ -1,15 +1,0 @@
-#
-# Copyright (c) 2006-2011, Prometheus Research, LLC
-# See `LICENSE` for license information, `AUTHORS` for the list of authors.
-#
-
-
-from . import lookup
-from htsql.addon import Addon
-
-
-class TweakSchemaAddon(Addon):
-
-    name = 'tweak.schema'
-
-
