@@ -5,7 +5,8 @@ List of Changes
 2.2.0 beta 1 (2011-09-20)
 -------------------------
 
-* fixed silent data truncation bug on invalid values.
+* fixed silent data truncation bug on invalid values; users of SQLite
+  are adviced to upgrade.
 * added support for loading application configuration from a file;
   option `-C FILE`.
 * refactored plugin architecture; added support for plugin parameters.
@@ -14,6 +15,8 @@ List of Changes
   to statements.
 * added plugin `tweak.meta`: database metadata exposed as a database.
 * added plugin `tweak.shell`: a simple web-based HTSQL editor.
+* removed plugin `tweak.schema`: functionality is implemented in
+  the core.
 
 
 2.1.1 final (2011-08-30)
